# fan-controller

./: Cargo.toml  LICENSE  README.md  shell.nix
.cargo/: config.toml
src/: main.rs
